; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_redis-client.c_on_redis_close.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_redis-client.c_on_redis_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"disconnected from redis\0A\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"redis connection failure: %s\0A\00", align 1
@client = common dso_local global i32 0, align 4
@host = common dso_local global i32 0, align 4
@port = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @on_redis_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_redis_close(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @stderr, align 4
  %7 = call i32 (i32, i8*, ...) @fprintf(i32 %6, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  br label %17

8:                                                ; preds = %1
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 (i32, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i8* %10)
  %12 = call i32 @usleep(i32 1000000)
  %13 = load i32, i32* @client, align 4
  %14 = load i32, i32* @host, align 4
  %15 = load i32, i32* @port, align 4
  %16 = call i32 @h2o_redis_connect(i32 %13, i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %8, %5
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @usleep(i32) #1

declare dso_local i32 @h2o_redis_connect(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
